fix dropdown styles and gap

--- a/src/blocks/navigation/style.scss
+++ b/src/blocks/navigation/style.scss
@@ -222,26 +222,6 @@ $link-color-property: var(
 			}
 		}
 	}
-	// .kb-menu-mega-width-custom > .sub-menu {
-	// 	--kb-nav-dropdown-show-transform-y: 0;
-	// 	--kb-nav-dropdown-show-transform-x: -50%;
-	// 	--kb-nav-dropdown-hide-transform-x: -50%;
-	// 	--kb-nav-dropdown-show-left: 50%;
-	// 	&.sub-menu-right-edge {
-	// 		--kb-nav-dropdown-show-left: auto;
-	// 		--kb-nav-dropdown-show-right: 0;
-	// 		--kb-nav-dropdown-show-transform-y: 0;
-	// 		--kb-nav-dropdown-show-transform-x: 0;
-	// 		--kb-nav-dropdown-hide-transform-x: 0;
-	// 	}
-	// 	&.sub-menu-left-edge {
-	// 		--kb-nav-dropdown-show-left: 0;
-	// 		--kb-nav-dropdown-show-right: auto;
-	// 		--kb-nav-dropdown-show-transform-y: 0;
-	// 		--kb-nav-dropdown-show-transform-x: 0;
-	// 		--kb-nav-dropdown-hide-transform-x: 0;
-	// 	}
-	// }
 	// Handle Reveal Animation for horizontal navs, hover and triggered via arrow.
 	.menu-item:not(.kb-nav-link-sub-click):hover > .sub-menu,
 	.menu-item.menu-item--toggled-on > .sub-menu {
@@ -326,9 +306,12 @@ $link-color-property: var(
 	.menu-container {
 		display: block;
 		.menu {
-			display: block;
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
 			.menu-item {
 				display: list-item;
+				width: 100%;
 				//margin: initial;
 				.sub-menu.sub-menu {
 					// Have to use important here because the javascript can add inline styles that would override
@@ -336,6 +319,8 @@ $link-color-property: var(
 					--kb-nav-dropdown-show-left: 0 !important;
 					--kb-nav-dropdown-hide-transform-x: 0 !important;
 					--kb-nav-dropdown-show-transform-x: 0 !important;
+					--kb-nav-dropdown-margin-top: 0 !important;
+					--kb-nav-dropdown-margin-bottom: 0 !important;
 				}
 			}
 		}
@@ -683,6 +668,8 @@ $link-color-property: var(
 			var(--kb-nav-padding-left, 0);
 		margin: var(--kb-nav-margin-top, 0) var(--kb-nav-margin-right, 0) var(--kb-nav-margin-bottom, 0)
 			var(--kb-nav-margin-left, 0);
+		row-gap: var(--kb-nav-row-gap, 0);
+		column-gap: var(--kb-nav-column-gap, 0);
 
 		//show a sub menu when this menu is toggled or gains focus if no js.
 		.menu-item--toggled-on > .sub-menu,
